feat: implement proper window management for VS Code operations
- Default behavior: open in new window, then reuse that window for subsequent operations
- Add reuseWindow parameter to ShowFile and ShowDiff tools
- Add --reuse-window/-r CLI flag for both file and diff commands
- First operation opens new window, subsequent operations reuse it
- Users can explicitly request current window with reuseWindow: true
- Ensures consistent behavior across all operations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "strictFunctionTypes": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noUnusedParameters": true,
     "exactOptionalPropertyTypes": false,
     "skipLibCheck": true,
